v 0.8.5.5

Added "Trade all" option

v 0.8.5.4

changed by Zusias:

Added %power toggle for automated structures
____

Removed leather from the resources

v 0.8.4.4

Time to cap in the resource tooltips

v 0.8.4.3

Fixed Sunsipre not giving faith bonus
Fixed Ziggurat upgrades not recalculating prices

Barges - improve coal limits for Harbors
Advanced Automation - makes Steamworks activate twice per year

Paragon levels should give minor bonus to the resource limit

+ pile of placeholder techs

v 0.8.3.2

Drama and Poetry tech
Cultural Festivals

Fixed steamworks giving effect even without the oil

v 0.8.2.2

Geodesy will now give ~60% boost to the geologists coal output ( 0.0225 cpt, 0.0008 gpt)

v 0.8.2.1

Craftable blueprints (25 compendium, 25k science)

v 0.8.2.0

Titanium Saw
Alloy Saw

Magneto
Biolab

Industrialization

v 0.8.1.0

Alloy barns
Alloy axe

All barn capacity upgrades will now affect catnip as well if Silos are researched (25% of ratio)

v 0.8.0.0

Fixed few more memory leaks (Thanks Zusias!)

Craft table will display price tooltips for recipes
Renamed "Diplomacy" tab to "Trade"
Zebras will display titanium drop
Buy and Sell sections will be now color coded
Certain important messages in the log are now color coded

Nerfed Mints to the ground (less furs, significanly less ivory)
Fixed Titanium Warehouses not being correctly unlocked

v 0.7.9.9

Fixed lots of memory leaks in the game.

v 0.7.9.8

Silos (workshop upgrade), +750 max catnip to warehouse capacity

v 0.7.8.8

Basilica (religion upgrade for culture)
Acoustics (tech, 65K science, 65 compedium, unlocks Chapel)
Chapel ( + 200 to max culture, +0.05 culture per tick, +0.005 faith per tick )

v 0.7.7.7

Fixed resource table ( tooltips should work in chrome now)

v 0.7.7.6

Resources will stay if limit is lower for some reason. (Workaround for a couple of cases).

Titanium Barns
Titanium Warehouses

v 0.7.6.6

changed by Duke:
